correction overflow-x in app

--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: var(--font-general);
+    overflow-x: hidden;
   }
   body {
     font-size: 62.5%;
